--- a/contactus.html
+++ b/contactus.html
@@ -43,7 +43,7 @@
                     <label for="message">Message: <span class="required">*</span></label>
                     <textarea id="message" name="message" rows="4"></textarea>
                 </div>
-                <button type="submit">Submit</button>
+                <button type="submit" id="submit">Submit</button>
             </form>
         </div>
         <h2>Trusted Sources and Partners</h2>
