--- a/contactus.html
+++ b/contactus.html
@@ -32,15 +32,15 @@
             <h2>Contact Us</h2>
             <form id="contactForm" action="./submit_contact_form.html" method="get">
                 <div class="form-group">
-                    <label for="name">Name: <span class="required" id="required">*</span></label>
+                    <label for="name">Name: <span class="required" id="required-name">*</span></label>
                     <input type="text" id="name" name="name">
                 </div>
                 <div class="form-group">
-                    <label for="email">Email: <span class="required" id="required">*</span></label>
+                    <label for="email">Email: <span class="required" id="required-email">*</span></label>
                     <input type="email" id="email" name="email">
                 </div>
                 <div class="form-group">
-                    <label for="message">Message: <span class="required" id="required">*</span></label>
+                    <label for="message">Message: <span class="required" id="required-message">*</span></label>
                     <textarea id="message" name="message" rows="4"></textarea>
                 </div>
                 <button type="submit" id="submit">Submit</button>
