--- a/courses.html
+++ b/courses.html
@@ -38,7 +38,7 @@
         <!-- Programming and Development -->
         <span>
             <img src="./images/webd-icon.jpg" alt="icon" width="24" height="24">
-            <h3>Programming and Web Development</h3>
+            <h3 class="course-title">Programming and Web Development</h3>
         </span>
         <ol class="rollover-pd">
             <li>
@@ -138,7 +138,7 @@
         <!-- Data Science -->
         <span>
             <img src="./images/ds-icon.png" alt="icon" width="24" height="24">
-            <h3>Data Science and Analytics</h3>
+            <h3 class="course-title">Data Science and Analytics</h3>
         </span>
         <ol class="rollover-ds">
             <li>
@@ -238,7 +238,7 @@
         <!-- Cloud Computing -->
         <span>
             <img src="./images/cc-icon.png" alt="icon" width="24" height="24">
-            <h3>Cloud Computing</h3>
+            <h3 class="course-title">Cloud Computing</h3>
         </span>
         <ol class="rollover-cc">
             <li>
